# novartis_datathon_2024

./: .gitignore  README.md  notes_for_datathon.txt  pyproject.toml  settings.yaml
.github/workflows/: python-app.yml
.streamlit/: config.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/input/: example.csv
src/: 0_EDA.ipynb  10_Naive_Model.ipynb  app.py  automl.py  helper.py  model_catboost.py  model_catboost_best_score_point_045.py  model_catboost_best_score_point_045_training_to_2021.py  model_catboost_optimized_features.py  model_catboost_point040_scoree.py  model_etr.py  model_hgbr.py  model_xgboost.py  model_xgboost_best_score.py  model_xgboost_gridsearch.py  model_xgboost_optimized_features.py  utils.py
src/models/: models.py
src/tests/: test_app.py  test_utils.py
